<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background2"
    tools:context=".activities.MainActivity"
    android:focusable="false"
    android:focusableInTouchMode="false"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="false"
        android:focusableInTouchMode="false">

        <ListView
            android:id="@+id/products_lv_list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:focusable="false"
            android:focusableInTouchMode="false">

        </ListView>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>