<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_index"
        android:icon="@drawable/index"
        android:title="@string/navigation_home" />
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/search"
        android:title="@string/navigation_searches" />
    <!-- <item
        android:id="@+id/navigation_new_product"
        android:icon="@drawable/create_icon"
        android:title="@string/new_product" /> -->
</menu>